# Discord-token-grabber-cpp

./: CMakeLists.txt  README.md
Discord-Grabber-lib/include/: Decryption.h  Grabber.h  Utils.h  exports.h
Discord-Grabber-lib/src/: discord.cpp  exports.cpp
Discord-Grabber-lib/src/Decryption/: AES256.cpp  Base64.cpp  DPAPI.cpp
Discord-Grabber-lib/src/Utils/: EndsWith.cpp  GetEncryptKey.cpp
tests/Test1/: main.cpp
tests/Test2/: main.cpp
